fix: adjust host styles and add gap for improved layout

--- a/frontend/src/app/me-user/me-user.component.scss
+++ b/frontend/src/app/me-user/me-user.component.scss
@@ -5,11 +5,15 @@
 :host {
   display: flex;
   align-items: center;
-  gap: $gutter-normal;
-  background-color: rgba($color: $primary-light-color, $alpha: .15);
+  background-color: rgba($color: $primary-light-color, $alpha: 0.15);
   border-radius: 50px;
   padding: $gutter-tiny;
   overflow: hidden;
+}
+
+.money {
+  padding: 0 $gutter-normal;
+  line-height: 1;
 }
 
 .user {
